--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,10 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
-    <title>React Template</title>
+    <title>Alter Learning</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Exploring new ways of growing up.</noscript>
     <div id="root"></div>
   </body>
 </html>
